# sendfile

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  GenLargeFile.hs  NewTest.hs  SocketPair.hs  Test.hs  main.c  sendfile.cabal  test.hs
.github/workflows/: haskell-ci.yml
csrc/: sendfile_linux.c  sendfile_win32.c
doc/html/sendfile/: Network-Socket-SendFile.html  SendFile.html  doc-index.html  haddock-util.js  haddock.css  index-frames.html  index.html  mini_Network-Socket-SendFile.html  sendfile.haddock
src/: SendFile.hs  SendFile.hsc
src/Network/Socket/: SendFile.hs
src/Network/Socket/SendFile/: Darwin.hsc  FreeBSD.hs  FreeBSD.hsc  Handle.hs  Internal.hs  Internal.hsc  Iter.hs  Linux.hs  Linux.hsc  Portable.hs  Win32.hsc
src/SendFile/: Internal.hsc
