name:           sendfile
version:        0.1
synopsis:       A portable sendfile library
description:    A library which exposes for zero-copy sendfile functionality in a portable way.
license:        BSD3
author:         Matthew Elder <matt@mattelder.org>
maintainer:     Matthew Elder <matt@mattelder.org>
homepage:       http://patch-tag.com/r/sendfile
category:       Network
build-type:     Simple
cabal-version:  >= 1.6
hs-source-dirs: src

build-depends:  base >= 3 && < 5,
                network

source-repository head
    type:     darcs
    location: http://patch-tag.com/r/sendfile/pullrepo
