name:          sendfile
version:       0.1
synopsis:      A portable sendfile library
description:   A library which exposes for zero-copy sendfile functionality in a portable way.
license:       BSD3
author:        Matthew Elder <matt@mattelder.org>
maintainer:    Matthew Elder <matt@mattelder.org>
homepage:      http://patch-tag.com/r/sendfile
category:      Network
build-type:    Simple
cabal-version: >= 1.6

flag portable
    description: Explicitly enable portable sendfile support (implemented in Haskell)
    default:     False

library
    hs-source-dirs:  src

    exposed-modules: SendFile
    
    build-depends:   base >= 3 && < 5,
                     network >= 2 && < 3,
                     strict-io >= 0.1 && < 1
    
    if flag(portable)
      cc-options: -DPORTABLE_SENDFILE
    else
      if os(windows)
        cc-options: -DWIN32_SENDFILE
        c-sources: csrc/sendfile_win32.c
        extra-libraries: mswsock
      else
        cc-options: -DPORTABLE_SENDFILE

source-repository head
    type:     darcs
    location: http://patch-tag.com/r/sendfile/pullrepo
